@@ -85,12 +85,10 @@ Terminal_LDFLAGS =							\
 	$(VTE_LIBS)							\
 	$(TERMINAL_LIBS)
 
-if !PLATFORM_WIN32
 # install symlink to 'terminal'
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(bindir)
-	( cd $(DESTDIR)$(bindir) ; ln -sf Terminal terminal )
-endif
+	-( cd $(DESTDIR)$(bindir) ; ln -sf Terminal terminal )
 
 if HAVE_DBUS
 Terminal_CFLAGS +=							\
