@@ -1,3 +1,8 @@
+2006-11-06	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, terminal/Makefile.am: Fix installation on case
+	  insensitive file systems. Bug #2526.
+
 2006-11-04	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
